React visar dokument och skapar nua tomma dokument

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>React with Vite</title>
 </head>
 <body>
-    <div id="root">Hello David!</div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root">TexteditorApp</div>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
