--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/style.css">
     <title>React with Vite</title>
 </head>
 <body>
-    <div id="root">TexteditorApp</div>
+    <div class="app-body" id="root">TexteditorApp</div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
